<resources>
    <string name="app_name">PagupApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_order">Ordenes</string>
    <string name="menu_order_detail">Detalle de Orden</string>
    <string name="menu_order_update">Actualizar Orden</string>
    <string name="menu_gallery">Gallería</string>
    <string name="menu_slideshow">Presentación</string>

    <string-array name="array_order_state">
        <item>Anuladas</item>
        <item>Creadas</item>
        <item>Generadas</item>
        <item>En Proceso</item>
        <item>Finalizadas</item>
        <item>Todas</item>
    </string-array>

    <string-array name="array_priorities">
        <item>Normal</item>
        <item>Importante</item>
        <item>Urgente</item>
    </string-array>

    <string-array name="array_results">
        <item>En espera</item>
        <item>Operativo</item>
    </string-array>

    <string-array name="array_types">
        <item>Rutas Técnicas</item>
        <item>Sistemas</item>
    </string-array>

    <string name="external_dir">GetSignature</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="welcome">"Bienvenido!"</string>
    <string name="invalid_username">No es un nombre de Usuario válido</string>
    <string name="invalid_password">La cláve es inválida</string>
    <string name="login_failed">"Usuario o Contraseña incorrectos!"</string>
</resources>
